[tool.poetry]
name = "onboarding-agent"
version = "0.0.1"
description = "An onboarding agent built for LangGraph cloud."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.4.10"
langchain = "^0.2.17"
langchain-community = "^0.2.19"
langchain-core = "^1.0.4"
langchain-text-splitters = "^0.2.4"
pymilvus = "^2.5.4"
openai = "^1.97.1"
tiktoken = "^0.8.0"
python-dotenv = "^1.1.0"
google-genai = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
